# Charmander_BE

./: .gitignore  README.md  appspec.yml  build.gradle  settings.gradle
.gemini/: styleguide.md
.github/workflows/: deploy-dev-oci.yml  deploy.yml  deploy_api.yml  deploy_dev.yml
.run/: Application.run.xml
charmander-api/charmander-api-common/: build.gradle
charmander-api/charmander-api-core/: Dockerfile  build.gradle
charmander-api/charmander-api-lipsync/: .dockerignore  .gitignore  Dockerfile  ai.py  docker-compose.yml  inference.py  main.py  requirements.txt
charmander-api/charmander-api-tts/: .dockerignore  .gitignore  Dockerfile  README.MD  main.py  pyproject.toml
charmander-api/charmander-api-tts/assets/: model_list.json  speaker_list.json
charmander-api/charmander-api-tts/scripts/: entrypoint.sh
charmander-api/charmander-api-tts/src/: context.py
charmander-api/charmander-api-tts/src/aop/: retry.py
charmander-api/charmander-api-tts/src/lib/: http.py  queue.py  s3.py  tts.py
charmander-api/charmander-api-tts/src/lib/vits/: attentions.py  commons.py  data_utils.py  losses.py  mel_processing.py  models.py  modules.py  preprocess.py  train.py  train_ms.py  transforms.py  utils.py
charmander-api/charmander-api-tts/src/lib/vits/monotonic_align/: __init__.py  core.c  setup.py
charmander-api/charmander-api-tts/src/lib/vits/text/: cleaners.py  utils.py
charmander-api/charmander-api-tts/src/model/: tts.py
charmander-api/charmander-api-tts/src/routes/: api.py  models.py
charmander-api/charmander-api-video/: build.gradle  docker-compose.yml
charmander-api/charmander-sqs/: build.gradle
charmander-common/: build.gradle
gradle/: libs.versions.toml
scripts/: start-server.sh
(+334 files in other folders)
